# google-trend-notification

./: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml  test_browser.py  test_debug.py  test_full.py  test_integration.py  test_minimal.py  test_output.txt  test_result.txt
src/trend_fetcher/: __init__.py  config.py  database.py  deduplicator.py  discord.py  fetcher.py  health.py  main.py  models.py  parser.py
