[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trend-fetcher"
version = "1.0.0"
description = "24/7 Google Trends Gaming Alert System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trend_fetcher"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
